plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'academy.devdojo'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

ext {
	springJpaVersion = '4.0.6';
	postgresqlVersion = '42.7.11';
	h2Version = '2.4.240';
	dataFakerVersion = '2.4.0';
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	implementation 'org.springframework.boot:spring-boot-starter-validation:'

	implementation "org.postgresql:postgresql:$postgresqlVersion"
	implementation "net.datafaker:datafaker:$dataFakerVersion"

	testImplementation "com.h2database:h2:$h2Version"
}

tasks.named('test') {
	useJUnitPlatform()
}
